Thu Oct 14 04:59:11 BST 1999 Nick Lamb <njl195@zepler.org>

	* app/preferences_dialog.c: Recalculate size of ctree in the
	preferences dialog after adding all the categories.
	This is the real fix for #2508.

Thu Oct 14 04:08:31 *EST 1999  Sven Neumann <sven@gimp.org>

	* plug-ins/common/Makefile.am
	* plug-ins/common/plugin-defs.pl
	* plug-ins/common/pnm.c
	* plug-ins/common/sunras.c
	* plug-ins/common/xbm.c
	* plug-ins/common/xwd.c: a step further down on the road to make
	all save plug-ins export-aware

Thu Oct 14 01:00:03 MEST 1999  Sven Neumann <sven@gimp.org>

	* app/gdisplay.c
	* app/gimage.c
	* app/gimpimage.c
	* app/guides_cmds.c
	* app/move.c
	* app/undo.c
	* app/undo_types.h
	* app/xcf.c
	* tools/pdbgen/pdb/guides.pdb: a whole lotta guide fixes:
	Guides are now freed on image close; undo should work in all
	cases; resize and scale use undo_groups so all operations are
	undoable in one step; some display probs fixed.

	* plug-ins/common/rotate.c: when rotating an image, rotate 
	the guides too.

	This should fix bug #2608. 

Wed Oct 13 21:37:51 BST 1999 Andy Thomas <alt@gimp.org>

	* app/crop.c
	* app/sca_convert.c

	Fixes to memory problems (use of freed memory references) found
	by running with dmalloc. 

	* app/paths_dialog.c 

	Locking of multiple paths are now displayed correctly in the
	transform tool.
	
Mon Oct 11 02:45:06 BST 1999 Nick Lamb <njl195@zepler.org>

	* plug-ins/common/psp.c: Saving is not implemented, so never add
	PSP to the list of available Save formats

Mon Oct 11 23:50:50 PDT 1999 Manish Singh <yosh@gimp.org>

	[both these are from patches by SHIRASAKI Yasuhiro]

	* app/menus.c: tearoff i18n patch

	* plug-ins/AlienMap/AlienMap.c
	* plug-ins/AlienMap/Makefile.am
	* plug-ins/AlienMap2/AlienMap.c
	* plug-ins/AlienMap2/Makefile.am: misc i18n fixes
	
1999-10-12  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/winsnap/winsnap.c: Don't resize layer, it causes image
	corrruption! (bug in layer_resize?) Slight cosmetic changes.
